ibuilder/tests/not_compile/unknown_attribute2.stderr
error: unknown attribute
 --> $DIR/unknown_attribute2.rs:5:16
  |
5 |     #[ibuilder(wibble_monster)]
  |                ^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `builder` found for struct `Foo` in the current scope
  --> $DIR/unknown_attribute2.rs:10:10
   |
4  | struct Foo {
   | ---------- function or associated item `builder` not found for this
...
10 |     Foo::builder();
   |          ^^^^^^^ function or associated item not found in `Foo`
